[WebView] Icon font doesn't work if single page application will be loaded from jar

XMLWordPrintable

    • web
    • x86
    • windows_8

        FULL PRODUCT VERSION :
        java version "1.8.0_74"
        Java(TM) SE Runtime Environment (build 1.8.0_74-b02)
        Java HotSpot(TM) 64-Bit Server VM (build 25.74-b02, mixed mode)

        ADDITIONAL OS VERSION INFORMATION :
        Microsoft Windows [Version 6.3.9600]

        A DESCRIPTION OF THE PROBLEM :
        I sumbitted the following bug which was fixed with 8u72.
        https://bugs.openjdk.java.net/browse/JDK-8136466

        No I tried to use an icon font in my application and now I've found the next issue:
        -> icon fonts doesn't work if a single page application will be loaded from a resource.

        I extended my example:
        https://github.com/shruda/jdk/tree/master/webview/singlepage

        Please verify if another resource loader is affected.

        Thanks in advance,
        Steve

        REGRESSION. Last worked in version 8u74


        REPRODUCIBILITY :
        This bug can be reproduced always.

              Assignee:
              Guru Hb (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: