8152420: [WebView] Icon font doesn't work if single page application will be loaded from jar

Reviewed-by: ddhill, kcr