modules/web/src/test/resources/test/html/archive-r0.js
@@ -1,0 +1,1 @@
+function jsr0() { return 'loaded'}
